[package]
name = "cealign"
version = "0.1.0"
edition = "2021"
license = "0BSD"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
description = "Implementation of the Combinatorial Extension (cealign) algorithm to align protein structures"
repository = "https://github.com/rvhonorato/cealign"
readme = "README.md"
keywords = []
categories = []


[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nalgebra = "0.33"
pdbtbx = "0.11"
regex = "1.10"
# FIXME: Move this deps into a different profile
plotters = "0.3"
rand = "0.8"
