[package]
name = "cealign"
version = "0.1.0-rc.1"
edition = "2021"
license = "0BSD"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
description = "Implementation of the Combinatorial Extension (cealign) algorithm to align protein structures"
repository = "https://github.com/rvhonorato/cealign"
readme = "README.md"
keywords = [
  "bioinformatics",
  "protein",
  "structure",
  "alignment",
  "computational-biology",
]
categories = []


[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nalgebra = "0.34"
pdbtbx = "0.12"
plotters = "0.3"
rand = "0.10"
regex = "1.10"
