[package]
name = "cealign"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "0BSD"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
description = "Implementation of the Combinatorial Extension (cealign) algorithm to align protein structures"
repository = "https://github.com/rvhonorato/cealign"
homepage = "https://github.com/rvhonorato/cealign"
documentation = "https://docs.rs/cealign"
readme = "README.md"
keywords = [
  "bioinformatics",
  "structural-biology",
  "structural-alignment",
  "cealign",
]
categories = ["science", "command-line-utilities"]
exclude = ["data/"]

[features]
plot = ["dep:plotters"]


[lib]
name = "cealign"
path = "src/lib.rs"

[[bin]]
name = "cealign"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nalgebra = "0.34"
pdbtbx = "0.12"
plotters = { version = "0.3", optional = true }
rand = "0.10"
regex = "1.10"
